--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "servidorhotelviernes",
+  "name": "servidorhotelesviernes",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.2",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongoose": "^6.6.1"
   }
 }
