Descanso de la clase 7/10/2022 corrigiendo errores

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-DATABASE = mongodb+srv://juanramirez:admin123@juan.wcshdrz.mongodb.net/?retryWrites=true&w=majority
+DATABASE = mongodb+srv://juandos:admin123@cluster0.nksxwsa.mongodb.net/?retryWrites=true&w=majority
